# Lima-camera-ultra

./: .gitignore  CMakeLists.txt  Makefile  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: Doxyfile  index.rst
include/: UltraCamera.h  UltraInterface.h  UltraNet.h
python/: __init__.py
sip/: UltraCamera.sip  UltraInterface.sip
src/: Makefile  UltraCamera.cpp  UltraDetInfoCtrlObj.cpp  UltraInterface.cpp  UltraNet.cpp  UltraSyncCtrlObj.cpp
tango/: CMakeLists.txt
test/: UltraTest.py
